tests/machine/x/c/group_by_conditional_sum.error
line: 0
error: output mismatch
-- got --
<list>
-- want --
map[cat:a share:0.6666666666666666] map[cat:b share:1]
   1: #include <stdio.h>
